--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Interacts with a QR3d STL file generator service",
     "type": "library",
     "require": {
-        "guzzlehttp/guzzle": "^7.0"
+        "guzzlehttp/guzzle": "^7.0|^6.0"
     },
     "autoload": {
         "psr-4": {
